fixed style gap

--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -11,7 +11,6 @@
   align-items: center;
   justify-content: space-between;
   padding-bottom: 1rem;
-  gap: 1rem;
   flex-wrap: wrap;
 }
 
@@ -32,7 +31,7 @@
 .balance-stats-wrapper {
   display: flex;
   flex-direction: row;
-  gap: 1rem;
+  gap: 0.5rem;
   width: 100%;
 }
 /* Holdings container */
@@ -249,7 +248,7 @@
 @media (max-width: 767px) {
   .balance-stats-wrapper {
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
   }
   .top-container {
     flex-direction: column;
